Fix content alignment and active link behavior

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1657,10 +1657,13 @@ body.is-preload #header .content .inner {
 	-webkit-align-items: center;
 	-ms-align-items: center;
 	align-items: center;
-	-moz-justify-content: center;
-	-webkit-justify-content: center;
-	-ms-justify-content: center;
-	justify-content: center;
+	align-items: center;
+	-moz-justify-content: flex-start;
+	-webkit-justify-content: flex-start;
+	-ms-justify-content: flex-start;
+	justify-content: flex-start;
+	padding-top: 4rem;
+	/* Push content down from top */
 	-moz-flex-direction: column;
 	-webkit-flex-direction: column;
 	-ms-flex-direction: column;
